--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   </head>
 
   <body>
+    <div id="chart"></div>
     <script src="src/index.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/frappe-charts@1.2.4/dist/frappe-charts.min.iife.js"></script>
   </body>
 </html>
