--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
 
   <body>
     <div id="chart"></div>
+    <form class="d-flex" role="search">
+      <input
+        type="search"
+        id="input-area"
+        placeholder="Search municipality..."
+      />
+      <button id="submit-data" type="submit">Search</button>
+    </form>
     <script src="src/index.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/frappe-charts@1.2.4/dist/frappe-charts.min.iife.js"></script>
   </body>
