--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
       />
       <button id="submit-data" type="submit">Search</button>
     </form>
+    <br />
+    <button id="add-data">Add a data point</button>
     <script src="src/index.js"></script>
   </body>
 </html>
